2023-10-24T01:16:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6621029256 # 892
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-24
* notice: last 14d: unq all: 3 37
* notice: prev accum: outdated-unq outdated-all / unq all: 264 555 / 280 592
* notice: next accum: outdated-unq outdated-all / unq all: 264 555 / 281 593
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-10 2023-10-24]

2023-10-23T16:22:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6616108396 # 891
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-23
* notice: last 14d: unq all: 3 37
* notice: prev accum: outdated-unq outdated-all / unq all: 263 553 / 280 592
* notice: next accum: outdated-unq outdated-all / unq all: 264 555 / 280 592
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-10-09] / []

2023-10-23T08:23:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6610609985 # 890
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-23
* notice: last 14d: unq all: 3 38
* notice: prev accum: outdated-unq outdated-all / unq all: 263 553 / 279 591
* notice: next accum: outdated-unq outdated-all / unq all: 263 553 / 280 592
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-09 2023-10-23]

2023-10-23T01:16:54Z: