@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-24T01:16:13Z",
-  "count" : 4,
-  "count_minmax" : [ 2, 5 ],
-  "count_decinc" : [ -1, +5 ],
-  "uniques" : 2,
+  "timestamp" : "2023-10-24T08:22:23Z",
+  "count" : 1,
+  "count_minmax" : [ 1, 5 ],
+  "count_decinc" : [ -4, +5 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "uniques_decinc" : [ -1, +2 ]
 }
