@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-10-24T01:16:13Z",
+  "timestamp" : "2023-10-24T08:22:23Z",
   "count_outdated" : 555,
   "uniques_outdated" : 264,
-  "count" : 593,
+  "count" : 594,
   "uniques" : 281,
   "clones" : [
     {
       "timestamp": "2023-10-10T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 2, 5 ],
-      "count_decinc": [ 1, 5 ],
-      "uniques": 2,
+      "count": 1,
+      "count_minmax": [ 1, 5 ],
+      "count_decinc": [ 4, 5 ],
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2023-10-11T00:00:00Z",
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2023-10-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
