@@ -1,11 +1,11 @@
 {
-  "count": 37,
-  "uniques": 3,
+  "count": 35,
+  "uniques": 2,
   "clones": [
     {
       "timestamp": "2023-10-10T00:00:00Z",
-      "count": 4,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2023-10-11T00:00:00Z",
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2023-10-24T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
