@@ -1,3 +1,12 @@
+2023-10-24T08:22:23Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6624221466 # 893
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-24
+* notice: last 14d: unq all: 2 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 264 555 / 281 593
+* notice: next accum: outdated-unq outdated-all / unq all: 264 555 / 281 594
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -1 -3 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2023-10-10 2023-10-24]
+
 2023-10-24T01:16:13Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6621029256 # 892
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-24
